# Batch43

./: Batch43CustomTypedRedeemer.hs  Batch43FirstContract.hs  Batch43FirstRedeemer.hs  Batch43ParamsVesting.hs  Batch43TypedRedeemer.hs  README.md
DefiPlatform/: MathBounty.cabal
DefiPlatform/src/: Batch43MathBounty.hs  Batch43NFTminting.hs  Batch43RequestLoan.hs
MathBounty/src/: Batch43GuessingGame.hs  Batch43MathBounty.hs  Batch43NFTBounty.hs
NativeTokens/: CHANGELOG.md  NativeTokens.cabal  cabal.project
NativeTokens/src/: Batch43DeadlineMinting.hs  Batch43FreeMinting.hs  Batch43NftMinting.hs  Batch43SignedMinting.hs
