cabal-version:      2.4
name:               NativeTokens
version:            0.1.0.0
synopsis:           Bootstrap for NativeTokens PolicyValidators
license:            MIT
license-file:       LICENSE
author:             Roberto J. Cerrud
maintainer:         roberto.cerrud@vortecsla.com

category:           Concurrency
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Batch43FreeMinting
                    , Batch43SignedMinting
                    , Batch43DeadlineMinting
                    , Batch43NftMinting

    build-depends:     base ^>=4.14.1.0
                     , aeson
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
